--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,8 @@ body {
 }
 
 a,
+a:visited,
 a:hover {
-  text-decoration: none;
-  color: unset;
+  text-decoration: none !important;
+  color: unset !important;
 }
